# dadloop

./: LICENSE  README.md  pyproject.toml  requirements.txt
dadloop/: __init__.py  __main__.py  demos.py  launch.py  theme.py  tui.py
dadloop/core/: __init__.py  agent.py  context.py  controller.py  memory.py  plan.py  skills.py  tools.py  trace.py
dadloop/skills/: answering-big-questions.md  bedtime.md  breaking-up-fights.md  comforting-a-kid.md  fixing-things.md  grilling.md  grocery-runs.md  hosting.md  money-decisions.md  road-trips.md  saying-no.md  snow-shoveling.md  teaching-kids-stuff.md  the-thermostat.md  yard-work.md
docs/: README.md  architecture.md  contributing.md  skills.md
tests/: test_admin_screen.py  test_blocked_is_remembered.py  test_chrome_and_review.py  test_constitution.py  test_controller.py  test_launch_screen.py  test_memory_cognition.py  test_multihop.py  test_navigation.py  test_plan.py  test_skill_orchestration.py  test_stats.py  test_theme_tokens.py  test_trace.py
